--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
@@ -49,7 +49,7 @@
 
     <!-- the body of your page goes here -->
     <div class="container text-center">
-        <img class="d-block mx-auto mb-4" src="./images/elmo.jpg" alt="" width="200" height="200">
+        <img class="d-block mx-auto mb-4 responsive" src="./images/elmo.jpg" alt="">
         <h1>Welcome to john's Hiking App</h1>
         <a href="login.html" class="btn btn-info" role="button">Log in</a>
    </div>   
@@ -65,7 +65,7 @@
     <script src="./scripts/script.js"></script>
     <script>
         logout();       //make sure user is logged out
-</script>
+    </script>
 </body>
 
 </html>
