--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -2,7 +2,8 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="../images/hikeLogo.png" height="36">
-            HoCa Hikes</a>
+            Hiking
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -20,3 +21,5 @@
         </div>
     </div>
 </nav>
+
+<script src="../scripts/skeleton.js"></script>
