--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
         <div class="container bg-light p-5">
             <h1 class="display-4">Good morning, <span id="name-goes-here"></span></h1>
             <hr>
-            <p>Quote of the day: The best view comes after the hardest climb.</p>
+            <p>Quote of the day: <span id="quote-goes-here"></span></p>
         </div>
     </div>
 
