--- a/eachHike.html
+++ b/eachHike.html
@@ -25,6 +25,7 @@
     <!-------------------------------------------------------->
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -46,39 +47,15 @@
 
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
+
     <!-- the body of your page goes here -->
+   
+    <div class="container">
+        <h1><span id="hikeName"> this hike</span></h1>
+        <img class="hike-img responsive" src=""/>
+        <div id="details-go-here"></div>
+    </div>
     <!-- stuff -->
-    <div class="container-fluid bg-light text-dark p-5">
-        <div class="container bg-light p-5">
-            <h1 class="display-4">Good morning, <span id="name-goes-here"></span></h1>
-            <hr>
-            <p>Quote of the day: <span id="quote-goes-here"></span></p>
-        </div>
-    </div>
-    <div class="container"> 
-        <h1>Some popular hikes</h1>
-        <!-- Here is the container for cards  -->
-        <div class="container">
-            <div id="hikes-go-here" class="row row-cols-auto">
-            </div>
-        </div>
-    </div>
-    <!-- Templates for general use, not displayed -->
-    <template id="hikeCardTemplate">
-        <div class="card py-2 mx-2" style="width: 18rem">
-            <img id="image" class="card-image card-img-top" src=" ..." alt="..." />
-            <div class="card-body">
-                <h5 class="card-title"></h5>
-                <p class="card-length"></p>
-                <br />
-                <p class="card-text">
-                    Some quick example text to build on the card title and make up the
-                    bulk of the card's content.
-                </p>
-                <a class="btn btn-primary card-href">Read more ...</a>
-            </div>
-        </div>
-    </template>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -89,8 +66,7 @@
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
-    <script src="./scripts/main.js"></script>
-
+    <script src="./scripts/eachHike.js"></script>
 </body>
 
 </html>
