--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="../images/hikeLogo.png" height="36">
+            <img src="../images/hikelogo.png" height="36">
             Hiking
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
