--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="../images/hikeLogo.png" height="36">
+            <img src="../images/hikelogo.png" height="36">
             <span id="enter_username"></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="../aboutus.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../aboutus.html">Profile</a>
+                    <a class="nav-link" href="../profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../main.html">About Us</a>
